foodtube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodtube-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    # Frontend Configuration
    - host: foodtube.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8083 # Assuming the frontend-service listens on port 80

    # Backend Configuration
    - host: api.foodtube.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8084 # Assuming the backend-service listens on port 5000
